# MTClipFactory

./: .gitignore  README.md  alembic.ini  app_config.toml  pyproject.toml  run_mtclipfactory_pytest.bat  run_mtclipfactory_ui.bat  run_mtclipfactory_ui_smoke.bat
alembic/: env.py
doc/: 00_Document_Index.md  01_Project_Philosophy.md  02_Product_Vision_and_Scope.md  03_Implementation_Architecture.md  04_Engineering_Standards.md  05_Domain_Model.md  06_Database_Design_SQLAlchemy_Alembic.md  07_Testing_Strategy.md  08_MVP_Roadmap.md  09_Team_Working_Agreement.md  100_Auto_Factory_Preset_Spread_And_Live_Product_Contract_2026-06-27.md  101_Biothentic0001_Creative_Preset_Live_Audit_2026-06-27.md  102_Auto_Factory_Foreground_Family_Diversity_Guard_2026-06-27.md  103_Auto_Factory_Preset_Driven_Caption_Rendering_2026-06-27.md  104_Auto_Factory_Preset_Driven_Caption_Pool_Routing_2026-06-27.md  105_Auto_Factory_Preset_Aware_Caption_Signature_Planning_2026-06-27.md  106_Auto_Factory_Preset_Density_Profile_And_Presenter_Safe_Caption_Workflow_2026-06-27.md  10_UML_System_Overview.md  11_Project_Status_Report.md  12_Kanban_Board.md  13_Issues_Log.md  14_Lessons_Learned.md  15_System_Decomposition_Library_and_Factory.md  16_Operational_Reliability_and_Control_Center.md  17_Project_Progress_Snapshot.md  18_Composition_and_Timeline_Policy.md  19_Implementation_Roadmap.md  20_Master_Test_Plan.md  21_Test_Execution_Report_2026-06-08.md  22_UAT_Checklist_2026-06-08.md  23_Settings_UI_Audit_Test_Plan_2026-06-11.md  24_Settings_UI_Audit_Execution_Report_2026-06-11.md  (+75 more)
fonts/: README.md
(+181 files in other folders)
