[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mt-clip-factory"
version = "0.1.0"
description = "Workflow-driven product ad video production system."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "SQLAlchemy>=2.0,<3.0",
    "alembic>=1.18,<2.0",
    "PySide6>=6.11,<7.0",
]

[project.scripts]
mt-resource-library = "mt_clip_factory.ui.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
